--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 openai
-utils
-warnings
 os
-time
 pygame
 uuid
 platform
 threading
 phue
 fuzzywuzzy
-python-Levenshtein
 re
 langdetect
+setuptools
