--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ $RECYCLE.BIN/
 *.sublime-project
 *.sublime-workspace
 *.code-workspace
+notebooks/
+*.wav
+*/transcription.txt
+transcription.txt
